--- a/config/packages/asset_mapper.yaml
+++ b/config/packages/asset_mapper.yaml
@@ -1,5 +1,6 @@
 framework:
-    asset_mapper:
-        # The paths to make available to the asset mapper.
-        paths:
-            - assets/
+  asset_mapper:
+    paths:
+      - assets/
+    excluded_patterns:
+      - "*/assets/styles/sass/_*.scss"
