add register + upload img & login

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,8 @@ phpstan.neon
 ###> VSC ###
 /.vscode/
 ###< VSC ###
+
+###> folder img upload ###
+/public/uploads/products/
+/public/uploads/profils/
+###< VSC ###
