--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "easycorp/easyadmin-bundle": "^4.10",
         "fakerphp/faker": "^1.23",
         "knplabs/knp-paginator-bundle": "^6.3",
+        "mobiledetect/mobiledetectlib": "^4.8",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.28",
         "symfony/asset": "7.0.*",
